--- a/index.html
+++ b/index.html
@@ -113,11 +113,13 @@
         }
 
         .archive-link {
-            position: static;
-            padding: 20px;
-            background-color: #f0f0f0;
-            text-align: center;
+            position: fixed;
+            bottom: 10px;
+            right: 10px;
             font-size: 1rem;
+            background-color: transparent;
+            color: #333;
+            text-align: right;
         }
     </style>
 </head>
@@ -125,9 +127,9 @@
     <!-- SEZIONE 1 -->
     <section class="section">
         <div class="three-columns">
-            <div>Discover the beauty of bespoke design, crafted to perfection. Our dedication to quality ensures that every piece is a masterpiece, bringing elegance and functionality to your space with meticulous attention to detail.</div>
-            <div>Explore innovative solutions that elevate your space to new heights. From concept to creation, our design approach integrates the latest trends with timeless aesthetics to transform your environment into a work of art.</div>
-            <div>Our curated selection of design pieces will transform your environment. Each item is thoughtfully chosen to complement a range of styles, offering unique elements that enhance the overall ambiance of your space.</div>
+            <div>Discover the beauty of bespoke design, crafted to perfection.</div>
+            <div>Explore innovative solutions that elevate your space to new heights.</div>
+            <div>Our curated selection of design pieces will transform your environment.</div>
         </div>
         <div class="divider" style="margin-top: 88px;"></div>
     </section>
@@ -135,15 +137,15 @@
     <!-- SEZIONE 2 -->
     <section class="section">
         <div class="three-columns">
-            <div>Transform your ideas into reality with our expert design services. Our skilled designers are dedicated to crafting unique solutions that cater to your specific needs. Whether you seek modern elegance or classic charm, we ensure that your vision is realized with precision and creativity.</div>
-            <div>Our team of professionals will bring your vision to life with precision. We specialize in creating tailored designs that seamlessly blend form and function. Our commitment to excellence is reflected in every project, ensuring that your design is both beautiful and practical.</div>
-            <div>Experience the art of design with our tailored solutions for every need. From conceptualization to execution, we are committed to delivering exceptional results. Our approach is centered around understanding your requirements and providing innovative solutions that exceed your expectations.</div>
+            <div>Transform your ideas into reality with our expert design services. Our skilled designers are dedicated to crafting unique solutions that cater to your specific needs.</div>
+            <div>Our team of professionals will bring your vision to life with precision. We specialize in creating tailored designs that seamlessly blend form and function.</div>
+            <div>Experience the art of design with our tailored solutions for every need. From conceptualization to execution, we are committed to delivering exceptional results.</div>
         </div>
         <div class="image-text-container">
             <div class="slider">
-                <img src="https://via.placeholder.com/1080x600?text=Placeholder+Image+1" alt="Grafica Moderna Brooklyn 1">
-                <img src="https://via.placeholder.com/1080x600?text=Placeholder+Image+2" alt="Grafica Moderna Brooklyn 2">
-                <img src="https://via.placeholder.com/1080x600?text=Placeholder+Image+3" alt="Grafica Moda 1">
+                <img src="https://via.placeholder.com/1080x600?text=Placeholder+Image+1" alt="Immagine Placeholder 1">
+                <img src="https://via.placeholder.com/1080x600?text=Placeholder+Image+2" alt="Immagine Placeholder 2">
+                <img src="https://via.placeholder.com/1080x600?text=Placeholder+Image+3" alt="Immagine Placeholder 3">
             </div>
         </div>
         <div class="divider"></div>
@@ -152,15 +154,15 @@
     <!-- SEZIONE 3 -->
     <section class="section">
         <div class="three-columns">
-            <div>Redefine your space with our cutting-edge design solutions. Our innovative approach ensures that your design is both functional and aesthetically pleasing. We use the latest technologies and techniques to create spaces that are not only visually appealing but also highly functional.</div>
-            <div>We offer a range of services to meet your unique design needs. From graphic design to interior decor, we have the expertise to bring your vision to life. Our team is equipped to handle projects of any size and scope, providing comprehensive solutions that cater to your specific requirements.</div>
-            <div>Explore our collection to find the perfect fit for your environment. Our diverse range of products and services is designed to cater to every style and preference. Whether you are looking for contemporary, traditional, or eclectic designs, we have something to suit every taste.</div>
+            <div>Redefine your space with our cutting-edge design solutions. Our innovative approach ensures that your design is both functional and aesthetically pleasing.</div>
+            <div>We offer a range of services to meet your unique design needs. From graphic design to interior decor, we have the expertise to bring your vision to life.</div>
+            <div>Explore our collection to find the perfect fit for your environment. Our diverse range of products and services is designed to cater to every style and preference.</div>
         </div>
         <div class="image-text-container">
             <div class="slider">
-                <img src="https://via.placeholder.com/1080x600?text=Placeholder+Image+4" alt="Grafica Moda 2">
-                <img src="https://via.placeholder.com/1080x600?text=Placeholder+Image+5" alt="Grafica Moda 3">
-                <img src="https://via.placeholder.com/1080x600?text=Placeholder+Image+6" alt="Grafica Moda 4">
+                <img src="https://via.placeholder.com/1080x600?text=Placeholder+Image+4" alt="Immagine Placeholder 4">
+                <img src="https://via.placeholder.com/1080x600?text=Placeholder+Image+5" alt="Immagine Placeholder 5">
+                <img src="https://via.placeholder.com/1080x600?text=Placeholder+Image+6" alt="Immagine Placeholder 6">
             </div>
         </div>
         <div class="divider"></div>
@@ -169,15 +171,15 @@
     <!-- SEZIONE 4 -->
     <section class="section">
         <div class="three-columns">
-            <div>Immerse yourself in the world of sophisticated design. Our projects combine creativity and functionality to create stunning results. We focus on delivering designs that are both visually captivating and highly practical, ensuring that every element serves a purpose.</div>
-            <div>Our design solutions are crafted to meet the highest standards. We prioritize quality and innovation in every aspect of our work. Our commitment to excellence is evident in the attention to detail and the superior craftsmanship that define our projects.</div>
-            <div>Experience luxury and innovation with our exclusive offerings. Our designs are tailored to offer a unique and immersive experience. We strive to create environments that reflect your personality and preferences, offering bespoke solutions that stand out.</div>
+            <div>Immerse yourself in the world of sophisticated design. Our projects combine creativity and functionality to create stunning results.</div>
+            <div>Our design solutions are crafted to meet the highest standards. We prioritize quality and innovation in every aspect of our work.</div>
+            <div>Experience luxury and innovation with our exclusive offerings. Our designs are tailored to offer a unique and immersive experience.</div>
         </div>
         <div class="image-text-container">
             <div class="slider">
-                <img src="https://via.placeholder.com/1080x600?text=Placeholder+Image+7" alt="Grafica Moderna 3">
-                <img src="https://via.placeholder.com/1080x600?text=Placeholder+Image+8" alt="Grafica Moda 5">
-                <img src="https://via.placeholder.com/1080x600?text=Placeholder+Image+9" alt="Grafica Moda 6">
+                <img src="https://via.placeholder.com/1080x600?text=Placeholder+Image+7" alt="Immagine Placeholder 7">
+                <img src="https://via.placeholder.com/1080x600?text=Placeholder+Image+8" alt="Immagine Placeholder 8">
+                <img src="https://via.placeholder.com/1080x600?text=Placeholder+Image+9" alt="Immagine Placeholder 9">
             </div>
         </div>
         <div class="divider"></div>
@@ -216,7 +218,7 @@
                     if (!isMouseDown) return;
                     e.preventDefault();
                     const x = e.pageX - slider.offsetLeft;
-                    const walk = (x - startX) * 2;
+                    const walk = (x - startX) * 2; // Scroll speed
                     slider.scrollLeft = scrollLeft - walk;
                 });
             });
