--- a/index.html
+++ b/index.html
@@ -172,55 +172,54 @@
         Arkive
     </div>
 
-    <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            const sliders = document.querySelectorAll('.slider');
-            sliders.forEach(slider => {
-                let isMouseDown = false;
-                let startX;
-                let scrollLeft;
+   <script>
+    document.addEventListener('DOMContentLoaded', () => {
+        const sliders = document.querySelectorAll('.slider');
+        sliders.forEach(slider => {
+            let isDown = false;
+            let startX;
+            let scrollLeft;
 
-                slider.addEventListener('mousedown', (e) => {
-                    isMouseDown = true;
-                    startX = e.pageX - slider.offsetLeft;
-                    scrollLeft = slider.scrollLeft;
-                    slider.style.cursor = 'grabbing'; // Aggiunge feedback visivo
-                });
+            // Funzione per gestire il rilascio del mouse/touch
+            const end = () => {
+                isDown = false;
+                slider.classList.remove('active');
+                slider.style.cursor = 'grab'; // Ripristina il cursore
+            };
 
-                slider.addEventListener('mouseleave', () => {
-                    isMouseDown = false;
-                    slider.style.cursor = 'grab'; // Ripristina il cursore
-                });
+            // Funzione per gestire l'inizio del trascinamento
+            const start = (e) => {
+                isDown = true;
+                slider.classList.add('active');
+                startX = (e.pageX || e.touches[0].pageX) - slider.offsetLeft;
+                scrollLeft = slider.scrollLeft;
+                slider.style.cursor = 'grabbing'; // Feedback visivo per il cursore
+            };
 
-                slider.addEventListener('mouseup', () => {
-                    isMouseDown = false;
-                    slider.style.cursor = 'grab'; // Ripristina il cursore
-                });
+            // Funzione per gestire il movimento durante il trascinamento
+            const move = (e) => {
+                if (!isDown) return; // Se non è premuto, non fare nulla
+                e.preventDefault(); // Evita comportamenti predefiniti come la selezione di testo
 
-                slider.addEventListener('mousemove', (e) => {
-                    if (!isMouseDown) return;
-                    e.preventDefault();
-                    const x = e.pageX - slider.offsetLeft;
-                    const walk = (x - startX) * 2; // Velocità dello scroll
-                    slider.scrollLeft = scrollLeft - walk;
-                });
+                const x = (e.pageX || e.touches[0].pageX) - slider.offsetLeft;
+                const dist = (x - startX) * 2; // Velocità dello scroll
+                slider.scrollLeft = scrollLeft - dist;
+            };
 
-                // Aggiunta dello scroll tramite tocco per i dispositivi touch
-                let touchStartX = 0;
-                let touchScrollLeft = 0;
+            // Eventi per mouse
+            slider.addEventListener('mousedown', start);
+            slider.addEventListener('mousemove', move);
+            slider.addEventListener('mouseup', end);
+            slider.addEventListener('mouseleave', end);
 
-                slider.addEventListener('touchstart', (e) => {
-                    touchStartX = e.touches[0].pageX - slider.offsetLeft;
-                    touchScrollLeft = slider.scrollLeft;
-                });
-
-                slider.addEventListener('touchmove', (e) => {
-                    const x = e.touches[0].pageX - slider.offsetLeft;
-                    const walk = (x - touchStartX) * 2; // Velocità dello scroll
-                    slider.scrollLeft = touchScrollLeft - walk;
-                });
-            });
+            // Eventi per touch
+            slider.addEventListener('touchstart', start);
+            slider.addEventListener('touchmove', move);
+            slider.addEventListener('touchend', end);
         });
-    </script>
+    });
+</script>
+
+    
 </body>
 </html>
