--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <div class="image-text-container">
             <div class="slider">
                 <img src="marlus-1.png" alt="Immagine Placeholder 1">
-                <img src="https://via.placeholder.com/1080x600?text=Placeholder+Image+2" alt="Immagine Placeholder 2">
+                <img src="marlus-2.jpeg" alt="Immagine Placeholder 2">
                 <img src="https://via.placeholder.com/1080x600?text=Placeholder+Image+3" alt="Immagine Placeholder 3">
             </div>
         </div>
