--- a/index.html
+++ b/index.html
@@ -106,17 +106,17 @@
     </style>
 </head>
 <body>
-    <!-- SEZIONE 1 -->
-    <section class="section">
+    <!-- HEAD 1 -->
+    <section class="section" style="margin-top: 10px;>
         <div class="three-columns">
             <div>Discover the beauty of bespoke design, crafted to perfection.</div>
             <div>Explore innovative solutions that elevate your space to new heights.</div>
             <div>Our curated selection of design pieces will transform your environment.</div>
         </div>
-        <div class="divider" style="margin-top: 96px;"></div>
+        <div class="divider" style="margin-top: 110px;"></div>
     </section>
     
-    <!-- SEZIONE 2 -->
+    <!-- SLIDE 1 2 -->
     <section class="section">
         <div class="three-columns">
             <div>Transform your ideas into reality with our expert design services. Our skilled designers are dedicated to crafting unique solutions that cater to your specific needs.</div>
