--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 <body>
     <!-- HEAD 1 -->
     <section class="section">
-        <div class="three-columns" style="margin-top: 10px;>
+        <div class="three-columns">
             <div>Discover the beauty of bespoke design, crafted to perfection.</div>
             <div>Explore innovative solutions that elevate your space to new heights.</div>
             <div>Our curated selection of design pieces will transform your environment.</div>
