--- a/index.html
+++ b/index.html
@@ -109,9 +109,12 @@
     <!-- HEAD 1 -->
     <section class="section">
         <div class="three-columns">
-            <div>Discover the beauty of bespoke design, crafted to perfection.</div>
-            <div>Explore innovative solutions that elevate your space to new heights.</div>
-            <div>Our curated selection of design pieces will transform your environment.</div>
+            <div> Stefano Girard </div>
+            <div> me@girste.com </div>
+            <div> Our curated selection of design pieces will transform your environment. Our curated selection of design pieces will transform your environment. 
+            Our curated selection of design pieces will transform your environment.Our curated selection of design pieces will transform your environment.Our curated selection of design pieces will transform your environment.
+            Our curated selection of design pieces will transform your environment.Our curated selection of design pieces will transform your environment.Our curated selection of design pieces will transform your environment.
+            Our curated selection of design pieces will transform your environment.</div>
         </div>
         <div class="divider" style="margin-top: 110px;"></div>
     </section>
