--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     </style>
 </head>
 <body>
-    <!-- HEAD 1 -->
+    <!-- HEAD  -->
     <section class="section">
         <div class="three-columns">
             <div> Stefano Girard </div>
@@ -119,12 +119,12 @@
         <div class="divider" style="margin-top: 110px;"></div>
     </section>
     
-    <!-- SLIDE 1 2 -->
+    <!-- SLIDE 1  -->
     <section class="section">
         <div class="three-columns">
-            <div>Transform your ideas into reality with our expert design services. Our skilled designers are dedicated to crafting unique solutions that cater to your specific needs.</div>
-            <div>Our team of professionals will bring your vision to life with precision. We specialize in creating tailored designs that seamlessly blend form and function.</div>
-            <div>Experience the art of design with our tailored solutions for every need. From conceptualization to execution, we are committed to delivering exceptional results.</div>
+            <div> Amaro Màrlus </div>
+            <div> Restyling, branding </div>
+            <div> 2023 </div>
         </div>
         <div class="image-text-container">
             <div class="slider">
