--- a/index.html
+++ b/index.html
@@ -123,7 +123,9 @@
     <section class="section">
         <div class="three-columns">
             <div> Amaro Màrlus </div>
-            <div> Restyling, branding </div>
+            <div> 
+Visual identity for a group of contemporary taquerias based in Copenhagen, Denmark run by chef Rosio Sanchez.
+                A modern and playful interpretation of Mexican street sign vernacular using a variable typeface paired with a colorful palette as a nod to the vibrant Mexican cuisine. </div>
             <div> 2023 </div>
         </div>
         <div class="image-text-container">
