--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ Visual identity for a group of contemporary taquerias based in Copenhagen, Denma
         <div class="image-text-container">
             <div class="slider">
                 <img src="marlus-1.png" alt="Immagine Placeholder 1">
-                <img src="Marlus-2.jpeg" alt="Immagine Placeholder 2">
+                <img src="marlus-3.png" alt="Immagine Placeholder 2">
                 <img src="https://via.placeholder.com/1080x600?text=Placeholder+Image+3" alt="Immagine Placeholder 3">
             </div>
         </div>
