--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
         <div class="three-columns">
             <div> Amaro Màrlus </div>
             <div> 
-Visual identity for a group of contemporary taquerias based in Copenhagen, Denmark run by chef Rosio Sanchez.
-                A modern and playful interpretation of Mexican street sign vernacular using a variable typeface paired with a colorful palette as a nod to the vibrant Mexican cuisine. </div>
+                Revamped branding for an emerging amaro producer in the Turin area. 
+                A classic touch with colors reflecting the spirit of the drink, and a typeface inspired by vintage local bottles. </div>
             <div> 2023 </div>
         </div>
         <div class="image-text-container">
