--- a/index.html
+++ b/index.html
@@ -132,7 +132,8 @@
             <div class="slider">
                 <img src="marlus-1.png" alt="Immagine Placeholder 1">
                 <img src="marlus-3.png" alt="Immagine Placeholder 2">
-                <img src="https://via.placeholder.com/1080x600?text=Placeholder+Image+3" alt="Immagine Placeholder 3">
+                <img src="marlus-4.jpeg" alt="Immagine Placeholder 3">
+                 <img src="marlus-2.jpeg" alt="Immagine Placeholder 3">
             </div>
         </div>
         <div class="divider"></div>
