--- a/index.html
+++ b/index.html
@@ -110,7 +110,8 @@
     <section class="section">
         <div class="three-columns">
             <div> Stefano Girard </div>
-            <div> me@girste.com </div>
+            <div> <a href="mailto:me@girste.com.com"> me@girste.com </a>
+</div>
             <div> Our curated selection of design pieces will transform your environment. Our curated selection of design pieces will transform your environment. 
             Our curated selection of design pieces will transform your environment.Our curated selection of design pieces will transform your environment.Our curated selection of design pieces will transform your environment.
             Our curated selection of design pieces will transform your environment.Our curated selection of design pieces will transform your environment.Our curated selection of design pieces will transform your environment.
