--- a/index.html
+++ b/index.html
@@ -112,10 +112,14 @@
             <div> Stefano Girard </div>
             <div> <a href="mailto:me@girste.com.com"> me@girste.com </a>
 </div>
-            <div> Our curated selection of design pieces will transform your environment. Our curated selection of design pieces will transform your environment. 
-            Our curated selection of design pieces will transform your environment.Our curated selection of design pieces will transform your environment.Our curated selection of design pieces will transform your environment.
-            Our curated selection of design pieces will transform your environment.Our curated selection of design pieces will transform your environment.Our curated selection of design pieces will transform your environment.
-            Our curated selection of design pieces will transform your environment.</div>
+            <div> Here's the updated version:
+
+---
+
+I'm a designer from Italy, living in the mountains near Turin. My journey started at age 6 with playful collages in MS Word, where Clippy once asked what I'd like to do, 
+                and I answered, "this, for life." I’ve been hooked ever since. I craft visual identities for all kinds of brands, driven by creativity and fresh ideas. 
+                I love working closely with clients, sharing the process to help them envision their goals. With agency experience behind me, I now work independently 
+                and dive into personal projects with fellow creatives. Reach out for work, collaborations, or just a chat! ♥</div>
         </div>
         <div class="divider" style="margin-top: 110px;"></div>
     </section>
