--- a/index.html
+++ b/index.html
@@ -112,14 +112,15 @@
             <div> Stefano Girard </div>
             <div> <a href="mailto:me@girste.com.com"> me@girste.com </a>
 </div>
-            <div> Here's the updated version:
+            <div> Understood! Here’s a more integrated version:
 
 ---
 
-I'm a designer from Italy, living in the mountains near Turin. My journey started at age 6 with playful collages in MS Word, where Clippy once asked what I'd like to do, 
-                and I answered, "this, for life." I’ve been hooked ever since. I craft visual identities for all kinds of brands, driven by creativity and fresh ideas. 
-                I love working closely with clients, sharing the process to help them envision their goals. With agency experience behind me, I now work independently 
-                and dive into personal projects with fellow creatives. Reach out for work, collaborations, or just a chat! ♥</div>
+I'm a designer from Italy, living in the mountains near Turin. My journey began at age 6 with playful collages in MS Word, where Clippy 
+                once asked what I'd like to do, and I answered, "this, for life." I’ve been hooked ever since. I craft visual identities for brands, 
+                driven by creativity and fresh ideas. Alongside design, I’m passionate about writing and often take on copywriting projects. 
+                I love collaborating with clients, sharing the process to help them achieve their vision. With agency experience behind me, I now work 
+                independently and dive into personal projects with fellow creatives. Feel free to reach out for work, collaborations, or just to say hi! ♥ ♥</div>
         </div>
         <div class="divider" style="margin-top: 110px;"></div>
     </section>
