--- a/index.html
+++ b/index.html
@@ -112,11 +112,7 @@
             <div> Stefano Girard </div>
             <div> <a href="mailto:me@girste.com.com"> me@girste.com </a>
 </div>
-            <div> Understood! Here’s a more integrated version:
-
----
-
-I'm a designer from Italy, living in the mountains near Turin. My journey began at age 6 with playful collages in MS Word, where Clippy 
+            <div> I'm a designer from Italy, living in the mountains near Turin. My journey began at age 6 with playful collages in MS Word, where Clippy 
                 once asked what I'd like to do, and I answered, "this, for life." I’ve been hooked ever since. I craft visual identities for brands, 
                 driven by creativity and fresh ideas. Alongside design, I’m passionate about writing and often take on copywriting projects. 
                 I love collaborating with clients, sharing the process to help them achieve their vision. With agency experience behind me, I now work 
