--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         <div class="three-columns">
             <div> Sidewalk - Art Gallery </div>
             <div> Branding project from scratch. A physical and digital art gallery in the Milan area. Showcasing street artists who haven’t yet made their mark online. </div>
-            <div>Explore our collection to find the perfect fit for your environment. Our diverse range of products and services is designed to cater to every style and preference.</div>
+            <div> 2024 </div>
         </div>
         <div class="image-text-container">
             <div class="slider">
