--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         </div>
         <div class="image-text-container">
             <div class="slider">
-                <img src="https://via.placeholder.com/1080x600?text=Placeholder+Image+4" alt="Immagine Placeholder 4">
+                <img src="SDWK logo - full.png" alt="Immagine Placeholder 4">
                 <img src="sidewalk-2.gif" alt="Immagine Placeholder 5">
                 <img src="https://via.placeholder.com/1080x600?text=Placeholder+Image+6" alt="Immagine Placeholder 6">
             </div>
