--- a/index.html
+++ b/index.html
@@ -178,18 +178,19 @@
     <!-- SLIDER 3  -->
     <section class="section">
         <div class="three-columns">
-            <div> Amaro Màrlus </div>
+            <div> Locman </div>
             <div> 
                 Revamped branding for an emerging amaro producer in the Turin area. 
                 A classic touch with colors reflecting the spirit of the drink, and a typeface inspired by vintage local bottles. </div>
-            <div> 2023 </div>
+            <div> 2021 </div>
         </div>
         <div class="image-text-container">
             <div class="slider">
-                <img src="marlus-1.png" alt="Immagine Placeholder 1">
-                <img src="marlus-3.png" alt="Immagine Placeholder 2">
-                <img src="marlus-4.jpeg" alt="Immagine Placeholder 3">
-                 <img src="Marlus-2.jpeg" alt="Immagine Placeholder 3">
+                <img src="locman-1.png" alt="Immagine Placeholder 1">
+                <img src="locman-2.gif" alt="Immagine Placeholder 2">
+                <img src="locman-3.png" alt="Immagine Placeholder 3">
+                 <img src="locman-4.png" alt="Immagine Placeholder 3">
+                <img src="locman-5.png" alt="Immagine Placeholder 3">
             </div>
         </div>
         <div class="divider"></div>
