--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@
         <div class="three-columns">
             <div> Locman </div>
             <div> 
-                Revamped branding for an emerging amaro producer in the Turin area. 
-                A classic touch with colors reflecting the spirit of the drink, and a typeface inspired by vintage local bottles. </div>
+                Copywriting and design for an ad page of a luxury watch brand based on the island of Elba, Italy. 
+                I focused on clear messaging and elegant design to reflect the brand’s style. </div>
             <div> 2021 </div>
         </div>
         <div class="image-text-container">
